Fix text behind elements and add icons

--- a/web-app/src/app/components/user/user.component.css
+++ b/web-app/src/app/components/user/user.component.css
@@ -7,3 +7,27 @@ h2{
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.forbidden > img {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%) translateY(-150%);
+  width: 50px;
+  margin-top: 20px;
+}
+
+.forbidden {
+  position: relative;
+  margin-top: 200px;
+  height: 20vh;
+  width: 100vw;
+}
+
+.forbidden > p {
+  /* text-align: center; */
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+}
